GNOME Bugzilla – Bug 763216
GtkTextView's top-margin/bottom-margin don't work with non-scrolling textview
Last modified: 2016-03-09 16:26:16 UTC
Created attachment 323249 [details] Testcase As soon as the textview needs to grow vertically, the top-margin is ignored when only that is set, or the text is cut off at the top if both top-margin and bottom-margin is set. See attached video.
Video showing the issue: http://videobin.org/+bwr/fgr.ogg
Created attachment 323495 [details] [review] Make sure the allocation is at least as big as the borders seems overly simplistic, but works for my use case, no unittests fail and gedit seems to look normal as well.
seems logical and all tests i can think of are ok, so LGTM
Review of attachment 323495 [details] [review]: ok then
Pushed, thanks.