textview: Ensure the borders fit into the allocation

https://bugzilla.gnome.org/show_bug.cgi?id=763216